syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.instructure.soseedy";
option java_outer_classname = "SoSeedyProto";

package soseedy;

service SoSeedy {
  rpc CreateTeacher(CreateTeacherRequest) returns (Teacher) {}
}

message CreateTeacherRequest {
}

message Teacher {
  int32 id = 1;
  string username = 2;
  string password = 3;
  string domain = 4;
  string token = 5;
  string name = 6;
  string short_name = 7;
  string avatar_url = 8;
}
